# ray_tracing

./: CMakeLists.txt  README.md  format  stress
.github/workflows/: test.yml
inc/: CMakeLists.txt  debug_utils.h  math_util.h  vec3.h
src/: CMakeLists.txt  camera.c  camera.h  cube.c  cube.h  hit_record.c  hit_record.h  hittable.c  hittable.h  hittable_aggregate.c  hittable_aggregate.h  main.c  math_util.h  ray.c  ray.h  sphere.c  sphere.h  vec3.c  vec3.h  vec3_defs.h
tests/: CMakeLists.txt  Vec3Test.cc  Vec3Test.cpp  ray_tracing_ray_test.cpp  ray_tracing_vec3_test.cpp
